--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <h2>Planet Search</h2>
         <form id="planetForm">
-          <input id="planetInput" type="text" placeholder="enter planet number"/>
+          <input id="planetInput" name="planetId" type="text" placeholder="enter planet number"/>
           <button id="findPlanet" type="submit">Find Planet!</button>
         </form>
         <div id="planetData"></div>
@@ -45,7 +45,7 @@
         </div>
         </br>
         <h2>Pick a Number, Any Number</h2>
-        <input id="pick-a-number" type="text" placeholder="enter a number"/>
+        <input id="pick-a-number" name="anyNumber" type="text" placeholder="enter a number"/>
         <div id="random-math-fact">
 
         </div>
